# nrf

./: .gitignore
.devcontainer/: devcontainer.json  docker-compose.yml
app/: CMakeLists.txt  prj.conf
app/src/: main.cpp
